# template-ml-dvc

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  tox.ini
{{ cookiecutter.project_name }}/src/: cli.py  split_data.py  test_model.py  train_model.py
{{ cookiecutter.project_name }}/src/scripts/: split_data.py  test_model.py  train_model.py
{{ cookiecutter.project_name }}/templates/: confidence_score.json  train_test_split.json
